Created a POD -man page for xymon-graphite.

--- a/xymon/xymon-graphite-example.conf
+++ b/xymon/xymon-graphite-example.conf
@@ -1,6 +1,6 @@
 [packet loss]
 column=foo.bar 
-url=http://graphite.sasser.ws/render?width=500&from=-4hours&until=now&height=400&target=system.graphite.ping.*.packet_loss.percent&target=alias%28color%28threshold%2810%29%2C%22yellow%22%29%2C%22Warning%22%29&title=Packet_Loss&hideLegend=false&uniq=0.16443394137846012&rawData=true 
+url=http://graphite.example.com/render?width=500&from=-4hours&until=now&height=400&target=system.graphite.ping.*.packet_loss.percent&target=alias%28color%28threshold%2810%29%2C%22yellow%22%29%2C%22Warning%22%29&title=Packet_Loss&hideLegend=false&uniq=0.16443394137846012&rawData=true 
 warn=00 
 error=20 
 
@@ -9,6 +9,6 @@ probetype=independent
 columnregexp=ping\.([^\.]+)
 columneval=foo.$1
 column=foo.bar
-url=http://graphite.sasser.ws/render?width=500&from=-4hours&until=now&height=400&target=legendValue(system.graphite.ping.*.90percent.ms%2C%22avg%22)&title=90_perc_ping_time&uniq=0.8639914226792692
+url=http://graphite.example.com/render?width=500&from=-4hours&until=now&height=400&target=legendValue(system.graphite.ping.*.90percent.ms%2C%22avg%22)&title=90_perc_ping_time&uniq=0.8639914226792692
 warn = 20
 error = 30
